tests/fixtures/invalid/pow_str_int_list.py
# Cannot call pow() with Str, Int, List[int]
x = pow("hello", 1, [1, 2, 3])
